displaying other activites in a list below recommendations
